# titan

./: .gitignore  CMakeLists.txt  README.md  Titan Designer.sln
Titan Designer/src/: CMakeLists.txt  build.sh
src/: .clang-format  CMakeLists.txt  precommit.sh
src/core/: Application.cpp  Application.h  Array.h  Component.h  ContentManager.cpp  ContentManager.h  CoreNames.cpp  CoreNames.h  Data.h  Definitions.h  Globals.h  Main.cpp  Map.h  Memory.cpp  Node.cpp  Node.h  NodeManager.cpp  Object.cpp  Object.h  Project.cpp  Project.h  Property.h  Reference.cpp  Reference.h  Regex.h  ScriptManager.h  Serializer.cpp  Serializer.h  Signal.cpp  Signal.h  Stack.h  String.cpp  String.h  TChar.h  TMessage.cpp  TMessage.h  Time.cpp  Time.h  Window.cpp  Window.h  (+52 more)
src/editor/: EditorApp.cpp  EditorApp.h  editorapp.cpp  editorapp.h
src/game/: Game.cpp  Game.h  GameApp.cpp  GameApp.h  Scene.cpp  Scene.h  game.cpp  game.h  gameapp.cpp  gameapp.h  scene.cpp  scene.h  scenemanager.cpp  scenemanager.h
src/graphics/: FBO.cpp  FBO.h  FBOManager.cpp  FBOManager.h  Optics.cpp  Optics.h  PostProcess.cpp  RenderComponent.h  Renderer.cpp  Renderer.h  View.cpp  Viewport.cpp  Viewport.h  VisualEffect.cpp  VisualEffect.h  fbo.cpp  fbo.h  fbomanager.cpp  fbomanager.h  optics.cpp  optics.h  postprocess.cpp  postprocess.h  rendercomponent.cpp  rendercomponent.h  renderer.cpp  renderer.h  view.cpp  view.h  viewport.cpp  viewport.h
src/input/: Cursor.cpp  Event.cpp  Event.h  EventManager.h  Input.cpp  Input.h  Key.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  cursor.cpp  cursor.h  event.cpp  event.h  eventhandler.cpp  eventhandler.h  eventmanager.cpp  eventmanager.h  input.cpp  input.h  key.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
src/math/: ArrayMath.h  Bezier.h  Color.cpp  Color.h  Mat4.cpp  Mat4.h  Math.cpp  Math.h  Noise.cpp  Noise.h  Path.h  Quaternion.cpp  Quaternion.h  Real.cpp  Rect.h  Transform.cpp  Transform.h  TransformComponent.cpp  TransformComponent.h  Vec2.h  Vec3.h  Vec4.h  arraymath.h  bezier.h  color.cpp  color.h  ellipse.h  mat4.cpp  mat4.h  math.cpp  math.h  noise.cpp  noise.h  path.h  quaternion.cpp  quaternion.h  real.cpp  real.h  rect.h  transform.cpp  (+6 more)
src/physics/: CollisionData.cpp  CollisionShape.cpp  CollisionShape.h  PhysicsComponent.cpp  PhysicsComponent.h  PhysicsWorld.cpp  RigidBody.cpp  collisiondata.cpp  collisiondata.h  collisionshape.cpp  collisionshape.h  physicsworld.cpp  physicsworld.h  rigidbody.cpp  rigidbody.h
src/resources/: Audio.cpp  Audio.h  File.cpp  File.h  Font.cpp  Font.h  Resource.cpp  Resource.h  Shader (Exemplaar met conflict van DESKTOP-5PL4S9I 2017-08-16).cpp  Shader.cpp  Shader.h  ShaderManager.cpp  TextFile.cpp  Texture.cpp  Texture.h  XmlDocument.cpp  XmlDocument.h  audio.cpp  audio.h  file.cpp  file.h  font.cpp  font.h  resource.cpp  resource.h  shader.cpp  shader.h  shadermanager.cpp  shadermanager.h  textfile.cpp  textfile.h  texture.cpp  texture.h  xmldocument.cpp  xmldocument.h
src/types/: Callable.cpp  Callable.h  Method.h  MethodBinder.cpp  MethodBinder.h  MethodBuilder.cpp  MethodBuilder.h  MethodDefinition.cpp  MethodDefinition.h  MethodMaster.cpp  MethodMaster.h  MethodTemplate.cpp  MethodTemplate.h  (+34 more)
tests/: ArithmeticTest.cpp  CMakeLists.txt  TitanScriptTests.cpp  headless.cpp  setup_headless_display.sh
(+778 files in other folders)
